<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECU Update</string>
    <string name="hello_world">登录</string>
    <string name="action_settings">Settings</string>
    <string name="login_in">登录</string>
    <string name="cancel">取消</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="namename">namename</string>
    <string name="playname">playname</string>
    <string name="password">password</string>
    <string name="playpass">playpass</string>
    <string name="submit">submit</string>
    <string name="ok">OK</string>
    <string name="error">error</string>

    <drawable name="clr_normal">#009ACD</drawable>
    <drawable name="clr_pressed">#00B2EE</drawable>

    <string name="path">下载路径</string>
    <string name="downloadbutton">下载</string>
    <string name="sdcarderror">SDCard不存在或者写保护</string>
    <string name="success">下载完成</string>
    
    <string name="hello">listview Tutorial</string>
    <string name="s_mylistview_btn">简单的listview</string>
    <string name="s_simpleCursorAdapter_btn">simpleCursorAdapter</string>
    <string name="s_simpleAdapter_btn">simpleAdapter</string>
    <string name="s_myAdapter_btn">myAdapter</string>
    <string name="s_btn_download">下载</string>
    <string name="s_btn_showdetail">详细信息</string>

</resources>